--- a/package.json
+++ b/package.json
@@ -65,9 +65,12 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.8",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
