fix: add step to install pnpm

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,8 +22,8 @@ jobs:
 
     # GitHub Actions permissions required to use WIF
     permissions:
-      contents: 'read'
-      id-token: 'write' # Required for WIF authentication
+      contents: "read"
+      id-token: "write" # Required for WIF authentication
 
     steps:
       - name: Checkout Repository
@@ -32,24 +32,28 @@ jobs:
       # --- 1. Authenticate with Google Cloud (Workload Identity Federation) ---
       # Uses the GCP_WIF_PROVIDER and GCP_SERVICE_ACCOUNT_EMAIL secrets from GitHub
       - name: Authenticate Google Cloud
-        uses: 'google-github-actions/auth@v2'
+        uses: "google-github-actions/auth@v2"
         with:
           workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
           service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
 
       # --- 2. Setup Node.js and Dependencies ---
+      # Install pnpm first (Recommended for pnpm projects)
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18' 
-          cache: 'pnpm'
-          cache-dependency-path: pnpm-lock.yaml # Specify pnpm lock file if using pnpm cache
+          node-version: "18"
+          cache: "pnpm"
+          # cache-dependency-path: pnpm-lock.yaml # Optional, usually auto-detected
 
       - name: Install Dependencies
-        # FIX: Changed to 'pnpm install' as requested by the user. 
-        # It is highly recommended to commit 'pnpm-lock.yaml' and use 'pnpm install --frozen-lockfile' 
-        # for deterministic builds when deploying to production.
-        run: pnpm install
+        # Use frozen-lockfile for consistent CI builds
+        run: pnpm install --frozen-lockfile
 
       # --- 3. Install Firebase CLI ---
       - name: Install Firebase CLI
