--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,70 +1,145 @@
-name: Frontend CI/CD Pipeline (Next.js to Firebase App Hosting - Secure)
+name: Frontend CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main", "master"]
+  pull_request:
+    branches: ["main", "master"]
   workflow_dispatch:
 
 env:
-  # --- 1. FIREBASE/GCP Environment Configuration ---
-  # App Hosting Backend ID (required for the deploy command)
-  FIREBASE_BACKEND_ID: trans-coor-front-server
-  # Your Google Cloud Project ID
+  # --- 1. PROJECT CONFIGURATION ---
   PROJECT_ID: property-transaction
-  # Deployment region for the Next.js server
-  REGION: us-east4
+  REGION: us-east1
+
+  # --- 2. ARTIFACT REGISTRY ---
+  REPO_NAME: property-transaction-coordinator-front
+  SERVICE_NAME: trans-coor-front-server
+
+  # --- 3. RUNTIME IDENTITY (Cloud Run) ---
+  RUNTIME_SERVICE_ACCOUNT: prop-coord-fe-runtime-sa@property-transaction.iam.gserviceaccount.com
 
 jobs:
-  deploy-frontend:
-    name: Deploy to Firebase App Hosting
+  # ========================================================================
+  # JOB 1: CI (Continuous Integration)
+  # ========================================================================
+  quality-checks:
+    name: Quality & Build Check
     runs-on: ubuntu-latest
-
-    # GitHub Actions permissions required to use WIF
-    permissions:
-      contents: "read"
-      id-token: "write" # Required for WIF authentication
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # --- 1. Authenticate with Google Cloud (Workload Identity Federation) ---
-      # Uses the GCP_WIF_PROVIDER and GCP_SERVICE_ACCOUNT_EMAIL secrets from GitHub
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - name: Setup Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "pnpm"
+
+      - name: Install Dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Lint Check
+        run: pnpm run eslint
+
+      - name: Build Check
+        run: pnpm run build
+        env:
+          # Dummy values for build time
+          AUTH0_SECRET: dummy_secret_for_build_check
+          AUTH0_CLIENT_ID: dummy_client_id
+          AUTH0_CLIENT_SECRET: dummy_client_secret
+          AUTH0_BASE_URL: http://localhost:3000
+          AUTH0_ISSUER_BASE_URL: https://dummy.auth0.com
+          AUTH0_SCOPE: openid profile email
+          APP_BASE_URL: http://localhost:3000
+
+  # ========================================================================
+  # JOB 2: CD - Build & Push
+  # ========================================================================
+  build-container:
+    name: Build & Push Image
+    needs: quality-checks
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: "read"
+      id-token: "write"
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Authenticate Google Cloud
+        id: auth
+        uses: "google-github-actions/auth@v2"
+        with:
+          token_format: "access_token"
+          workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
+          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+
+      - name: Authenticate Docker
+        uses: "docker/login-action@v3"
+        with:
+          registry: ${{ env.REGION }}-docker.pkg.dev
+          username: "oauth2accesstoken"
+          password: ${{ steps.auth.outputs.access_token }}
+
+      - name: Build & Push Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
+
+  # ========================================================================
+  # JOB 3: CD - Deploy Service
+  # ========================================================================
+  deploy-cloudrun:
+    name: Deploy Service
+    needs: build-container
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: "read"
+      id-token: "write"
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
       - name: Authenticate Google Cloud
         uses: "google-github-actions/auth@v2"
         with:
           workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
           service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
 
-      # --- 2. Setup Node.js and Dependencies ---
-      # Install pnpm first (Recommended for pnpm projects)
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
+      - name: Deploy to Cloud Run
+        uses: google-github-actions/deploy-cloudrun@v2
         with:
-          version: 9
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "pnpm"
-          # cache-dependency-path: pnpm-lock.yaml # Optional, usually auto-detected
-
-      - name: Install Dependencies
-        # Use frozen-lockfile for consistent CI builds
-        run: pnpm install --frozen-lockfile
-
-      # --- 3. Install Firebase CLI ---
-      - name: Install Firebase CLI
-        # Using pnpm to install global packages
-        run: pnpm install -g firebase-tools
-
-      # --- 4. Deploy to Firebase App Hosting ---
-      - name: Deploy to Firebase App Hosting
-        run: |
-          echo "Starting secure deployment for backend: ${{ env.FIREBASE_BACKEND_ID }}"
-
-          # The firebase deploy command reads apphosting.yaml.
-          # GCP secrets and custom SA are automatically managed by Firebase/Cloud Run.
-          firebase deploy --only apphosting --project ${{ env.PROJECT_ID }}
+          service: ${{ env.SERVICE_NAME }}
+          region: ${{ env.REGION }}
+          image: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
+          flags: "--service-account=${{ env.RUNTIME_SERVICE_ACCOUNT }} --allow-unauthenticated --port=3000"
+          env_vars: |
+            NODE_ENV=production
+          secrets: |
+            AUTH0_SECRET=AUTH0_SECRET:latest
+            AUTH0_CLIENT_SECRET=AUTH0_CLIENT_SECRET:latest
+            APP_BASE_URL=APP_BASE_URL:latest
+            AUTH0_AUDIENCE=AUTH0_AUDIENCE:latest
+            AUTH0_SCOPE=AUTH0_SCOPE:latest
+            AUTH0_CLIENT_ID=AUTH0_CLIENT_ID:latest
+            AUTH0_DOMAIN=AUTH0_DOMAIN:latest
+            BACKEND_API_URL=BACKEND_API_URL:latest
+            AUTH0_COOKIE_SAME_SITE=AUTH0_COOKIE_SAME_SITE:latest
+            AUTH0_COOKIE_SECURE=AUTH0_COOKIE_SECURE:latest
