--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -130,13 +130,7 @@ jobs:
           service: ${{ env.SERVICE_NAME }}
           region: ${{ env.REGION }}
           image: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
-          flags: |
-            --service-account=${{ env.RUNTIME_SERVICE_ACCOUNT }}
-            --allow-unauthenticated
-            --port=3000
-            --ingress=all 
-            --vpc-connector=${{ env.VPC_CONNECTOR_NAME }}
-            --vpc-egress=all-traffic
+          flags: "--service-account=${{ env.RUNTIME_SERVICE_ACCOUNT }} --allow-unauthenticated --port=3000 --vpc-connector=${{ env.VPC_CONNECTOR_NAME }} --vpc-egress=all-traffic"
           env_vars: |
             NODE_ENV=production
           secrets: |
